# messgo

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: SECRETS.md
.github/workflows/: ci.yml  deploy.yml
app/: main.py
app/application/: errors.py  ports.py
app/application/services/: auth_service.py  call_service.py  chat_service.py  message_service.py
app/core/: config.py  rate_limit.py  security.py
app/domain/: enums.py
app/infrastructure/: db.py  models.py  repositories.py
app/presentation/: deps.py  schemas.py
app/presentation/routes/: auth.py  chats.py  pages.py
app/presentation/ws/: endpoint.py  manager.py
app/static/: manifest.webmanifest
app/static/css/: app.css
app/static/js/: app.js  call.js  sw.js
app/templates/: app.html  base.html  login.html
app/templates/partials/: chat_list.html  messages.html
deploy/: Caddyfile  turnserver.conf.example
deploy/scripts/: deploy.sh
deploy/systemd/: messgo.service
tests/: conftest.py
tests/e2e/: test_auth_flow.py  test_realtime_chat_flow.py
tests/integration/: test_auth_api.py  test_call_signaling.py  test_chat_api.py  test_db_schema.py  test_deploy_artifacts.py  test_pages.py  test_repositories.py  test_ws_endpoint.py  test_ws_presence.py
tests/unit/: test_auth_service.py  test_call_service.py  test_chat_service.py  test_config.py  test_deps.py  test_message_service.py  test_rate_limit.py  test_security.py
tools/: run_mutation_tests.py
