[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "messgo"
version = "0.1.0"
description = "Лёгкий приватный мессенджер"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "messgo" }
]
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "sqlalchemy>=2.0.39,<3.0.0",
  "pydantic-settings>=2.10.1,<3.0.0",
  "argon2-cffi>=25.1.0,<26.0.0",
  "pyjwt>=2.10.1,<3.0.0",
  "jinja2>=3.1.6,<4.0.0",
  "python-multipart>=0.0.20,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "httpx>=0.28.1,<1.0.0",
  "ruff>=0.7.0,<1.0.0"
]

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]
filterwarnings = [
  "ignore::DeprecationWarning"
]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
skip_empty = true
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "C4"]
ignore = ["E501", "B008", "B011"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
